--- a/index.html
+++ b/index.html
@@ -61,6 +61,28 @@
       </footer>
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.6432551950697!2d139.69668641525826!3d35.66116008019895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ca854f6a1ef%3A0x7df1c06f6622b079!2z5Lq66ZaT6Zai5L-C77yIY2FmZSBkZSBjb3BhaW7vvIk!5e0!3m2!1sja!2sjp!4v1603699735956!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+    <div class="Form">
+      <div class="Form-Item">
+      </div>
+      <div class="Form-Item">
+        <p>氏名</p>
+        <input type="text" class="Form-Item-Input" placeholder="例）山田太郎">
+      </div>
+      <div class="Form-Item">
+        <p>電話番号</p>
+        <input type="text" class="Form-Item-Input" placeholder="例）000-0000-0000">
+      </div>
+      <div class="Form-Item">
+        <p>メールアドレス</p>
+        <input type="email" class="Form-Item-Input" placeholder="例）example@gmail.com">
+      </div>
+      <div class="Form-Item">
+        <p>お問い合わせ内容</p>
+        <textarea></textarea>
+      </div>
+      <input type="submit" class="Form-Btn" value="送信する">
+    </div>
   
 </body>
 </html>
